所有图形页面加背景颜色

--- a/iframe/basic_shapes.html
+++ b/iframe/basic_shapes.html
@@ -73,6 +73,8 @@
 
     .content-section {
         display: none;
+        padding: 15px;
+        border-radius: 8px;
     }
 
     .content-section.active {
@@ -124,6 +126,15 @@
     .btn:hover {
         background: #1977f3;
     }
+
+    /* 七个内容区域背景色 */
+    #circle { background: #fff0f0; }    /* 红 */
+    #polygon { background: #ffe0cc; }  /* 橙（已加深） */
+    #heart { background: #fff8e6; }    /* 橙黄 */
+    #star { background: #ffffe6; }     /* 黄 */
+    #tbd1 { background: #e6ffe6; }     /* 绿 */
+    #tbd2 { background: #e6f7ff; }     /* 青 */
+    #tbd3 { background: #f0e6ff; }     /* 蓝紫 */
 </style>
 </head>
 
@@ -429,6 +440,10 @@
 
 </body>
 </html>
+
+
+
+
 
 
 
