--- a/iframe/basic_shapes.html
+++ b/iframe/basic_shapes.html
@@ -147,7 +147,7 @@
         <div class="shape-btn" data-id="heart">心形</div>
         <div class="shape-btn" data-id="star">五角星</div>
 
-        <div class="shape-btn" data-id="tbd1">梅花</div>
+        <div class="shape-btn" data-id="tbd1">三叶草</div>
         <div class="shape-btn" data-id="tbd2">箭头</div>
         <div class="shape-btn" data-id="tbd3">月亮</div>
     </div>
@@ -397,7 +397,7 @@
     plumGenerateBtn.addEventListener("click", () => {
         const radiusMil = plumMilInput.value;
         console.log(`生成梅花：半径 ${radiusMil} mil`);
-        arrange_plum(radiusMil);
+        arrange_drop(radiusMil);
     });
 
     // ========== 箭头相关逻辑 ==========
